CLDR-14597 Restrict Organizations to specified locales (#1261)
-New functions u.hasLocalePermission, userHasLocale, orgHasLocale
-New class LocaleNormalizer with warnings reportable as html or plain text
-New unit test TestLocaleNormalizer
-Move code from SurveyMain.doGet into new subroutines createNewAndLogin, reportNormalizationWarning
-Remove obsolete UserRegistry.EXPERT, Level.expert
-Replace userIsExpert with userIsManagerOrStronger
-Revise unit tests that used expert users
-Make private the version of getGroup that is only used privately
-Simplify UserList.setLocales and UserRegistry.setLocales, use CookieSession instead of WebContext
-Fix unrelated js warning when json.status not defined
-Catch transient exception in setValueFromResolver
-Remove dead code
-Fix deprecation and other warnings
-Comments